# allocate

./: .gitignore  CMakeLists.txt  LICENSE.rst  NEWS.rst  README.rst  buildbot.py  config.py  waf  wscript
src/allocate/: aligned_allocator.hpp  is_aligned.hpp  some.cpp  some.hpp  wscript_build
test/: wscript_build
test/src/: test_aligned_allocator.cpp  test_is_aligned.cpp  test_some.cpp
